<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_splash"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  tools:context=".profile.ProfileActivity">

  <ImageView
    android:id="@+id/circle"
    android:layout_width="250dp"
    android:layout_height="230dp"
    android:layout_marginBottom="60dp"
    android:src="@drawable/accent_circle"
    android:tint="@color/colorPrimaryDark"
    app:layout_constraintBottom_toBottomOf="@+id/appImage"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@+id/appImage" />

  <ImageView
    android:id="@+id/appImage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_launcher_foreground"
    android:tint="@color/colorAccent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/appName"
    style="@android:style/TextAppearance.Large"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textColor="@color/colorAccent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appImage" />

  <ImageView
    android:id="@+id/backArrow"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_medium"
    android:background="?selectableItemBackgroundBorderless"
    android:src="?attr/homeAsUpIndicator"
    android:tint="@color/colorAccent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/emailInputLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:background="@color/white"
    app:layout_constraintBottom_toTopOf="@+id/passwordInputLayout"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="packed">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/emailInputEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textEmailAddress"
      android:autofillHints="emailAddress"
      android:hint="@string/email"
      android:importantForAutofill="yes" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/passwordInputLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_medium"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:background="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/passwordInputEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:autofillHints="password"
      android:hint="@string/password" />

  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/signInButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/sign_in"
    android:textAllCaps="false"
    app:layout_constraintLeft_toLeftOf="@+id/passwordInputLayout"
    app:layout_constraintRight_toRightOf="@+id/passwordInputLayout"
    app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

  <ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_margin="@dimen/margin_xsmall"
    android:elevation="2dp"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="@+id/signInButton"
    app:layout_constraintLeft_toLeftOf="@+id/signInButton"
    app:layout_constraintRight_toRightOf="@+id/signInButton"
    app:layout_constraintTop_toTopOf="@+id/signInButton"
    tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
